--- a/Eagle 2FA 响应式/css/index.css
+++ b/Eagle 2FA 响应式/css/index.css
@@ -463,7 +463,13 @@ select {
     width: 144px;
     height: 164px;
 }
-
+.add-text{
+    text-align: left;
+     font-size: 12px;
+    color: #BDD4FF;
+    margin-top: 17px;
+    line-height: 1.4em
+}
 .tac {
     text-align: center!important;
     margin-left: 0!important;
